--- a/Code/Drew/htmlcss/lab04-personal_portfolio.html
+++ b/Code/Drew/htmlcss/lab04-personal_portfolio.html
@@ -11,26 +11,25 @@
         position: relative;
         margin-bottom: 0px;
         height: 5%;
-        z-index: 3
       }
       #header-name {
-        position: absolute;
-        top: 50%;
+        position: fixed;
+        top: 10%;
         left: 50%;
-        margin-top: 30px;
+        margin-top: 0px;
         margin-left: 20px;
         transform: translate(-50%, -50%);
         font-family: 'Paytone One', sans-serif;
         color: #ffd6cf;
         text-align: center;
         font-size: 50px;
-        z-index: 3
       }
       .navbar {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         padding-bottom: 30px;
+        top: 300px;
       }
       .navbutton {
         display: inline-block;
@@ -45,15 +44,14 @@
         margin: 5px;
         border-radius: 3px;
       }
-      #mountains {
-        position: relative;
+      .mountains {
+        position: absolute;
         top: 0px;
         margin: 0px;
         margin-top: -5px;
         border: 0px;
         padding: 0px;
         transform:rotate(180deg);
-        z-index: 2
         /* filter:contrast(70%); */
         /* filter: hue-rotate(90deg); */
       }
@@ -86,7 +84,6 @@
       .moon {
         -webkit-transform: translateZ(90px) scale(.7);
         transform: translateZ(90px) scale(.7);
-        z-index: 1;
       }
       .sticky {
         position: -webkit-sticky;
@@ -94,15 +91,27 @@
         position: -ms-sticky;
         position: -o-sticky;
         position: sticky;
-        top: 15px;
+        top: 100px;
       }
-
+      .z1 {
+        z-index: 1
+      }
+      .z2 {
+        z-index: 2
+      }
+      .z3 {
+        z-index: 3
+      }
+      .z4 {
+        z-index: 4
+      }
     </style>
   </head>
-  <body>
+  <body class="z1">
     <div class="header">
-      <p id="header-name">Drew Herron</p>
-      <img id="mountains" src="images/mountains.gif" width="100%">
+      <p class="z3" id="header-name">Drew Herron</p>
+      <img class="z4 mountains" src="images/mountainverse1.gif" width="100%">
+      <img class="z2 mountains" src="images/mountains.gif" width="100%">
     </div>
     <div class="container">
       <p>container</p>
