--- a/Code/darren/javascriptATMlab.html
+++ b/Code/darren/javascriptATMlab.html
@@ -4,99 +4,116 @@
   <title>
    HTML ATM
   </title>
+  <meta charset="utf-8"/>
   <style type="text/css">
+  header {
+    font-size: 20px
+  }
   body {
     width: 500px;
+    z-index: 0
   }
   .sidebar {
     display: inline;
-    width: 200px;
-    padding: 5px;
-    margin: 5px;
-    position: fixed;
-    text-align: left;
+    width: 245px;
+    position: absolute;
     left: 50em;
     top: 0px;
     z-index: 1;
-    background-color: grey;
+    color: white;
+    background-color: black;
     opacity: 100%;
-    border: solid
+    border: solid white
+  }
+  ul {
+    list-style-type: none;
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+    background-color: black;
+    color: white;
+    border: solid white
+  }
+  li a {
+    display: block;
+    color: white;
+    padding: 7px;
+    text-decoration: none;
+  }
+  li a:hover {
+    background-color: white;
+    color: green;
+    animation-name: flicker;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+  }
+  @keyframes flicker{
+    40% {
+      background-color: grey;
+      color: lightgreen;
+    }
   }
   </style>
 </head>
 <section class="sidebar" id="atmOptions">
   <ul>
-  <li><a href="default.asp">Home</a></li>
-  <li><a href="news.asp">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-  <li><a href="about.asp">About</a></li>
+  <li><a href="Balance.asp">Balance</a></li>
+  <li><a href="Deposit.asp">Deposit</a></li>
+  <li><a href="Withdrawal.asp">Withdrawal</a></li>
+  <li><a href="Interest.asp">Interest</a></li>
+  <li><a href="History.asp">History</a></li>
   </ul>
-  <div class="window" id="dataField">
-    <p>
-    data field
-    </p>
-  </div>
 </section>
+<header align=left>
+  <h1>ATM Sim</h1>
+</header>
 <body align=left>
   <script type="text/javascript">
-  class ATM {
-    constructor(balance=0, interest=0.1) {
-      this.balance = balance;
-      this.history = [];
-      this.interest = interest;
-    }
-    getBalance() {
-      return this.balance;
-    }
-    makeDeposit(deposit) {
-      this.balance += parseInt(deposit);
-      let history_string = ' +';
-      history_string += deposit;
-      this.history.push(history_string);
-    }
-    makeWithdrawal(withdrawal) {
-      this.balance -= parseInt(withdrawal);
-      let history_string = ' -';
-      history_string += withdrawal;
-      this.history.push(history_string);
-    }
-    overdraftCheck(num) {
-      let balance = this.balance;
-      let withdrawal = num
-      let result = balance - withdrawal
-      if (result < 0){
-        return "invalid"
+    class ATM {
+      constructor(balance=0, interest=0.1) {
+        this.balance = balance;
+        this.history = [];
+        this.interest = interest;
+      }
+      getBalance() {
+        return this.balance;
+      }
+      makeDeposit(deposit) {
+        this.balance += parseInt(deposit);
+        let history_string = ' +';
+        history_string += deposit;
+        this.history.push(history_string);
+      }
+      makeWithdrawal(withdrawal) {
+        this.balance -= parseInt(withdrawal);
+        let history_string = ' -';
+        history_string += withdrawal;
+        this.history.push(history_string);
+      }
+      overdraftCheck(num) {
+        let balance = this.balance;
+        let withdrawal = num
+        let result = balance - withdrawal
+        if (result < 0){
+          return "invalid"
+        }
+      }
+      calcInterest() {
+        let interest = this.interest
+        interest = interest/100
+        let with_interest = interest * this.balance;
+        return with_interest
+      }
+      printHistory() {
+        return this.history
       }
     }
-    calcInterest() {
-      let interest = this.interest
-      interest = interest/100
-      let with_interest = interest * this.balance;
-      return with_interest
-    }
-    printHistory() {
-      return this.history
-    }
-
-}
-let atm = new ATM(0);
-alert(atm.getBalance())
-blah = atm.makeDeposit(29)
-alert(atm.getBalance())
-blah1 = atm.makeWithdrawal(2)
-nugget = atm.overdraftCheck(100)
-alert(nugget)
-alert(atm.getBalance())
-alert(atm.printHistory())
-alert(atm.calcInterest())
-</script>
+    let atm = new ATM(0);
+    let
+  </script>
 <div class="window" id="processField">
-  <h2>internal text<h2>
-  <ul>
-    <li>jkjas</li>
-    <li>dasda</li>
-    <li>dasdas</li>
-  </ul>
+  <h2>Welcome!<h2>
+  <div id="output_div" align=center>What would you like to do today?</div>
 </div>
 </body>
 </html>
