fixed icon visibility

--- a/Code/Drew/htmlcss/lab04-personal_portfolio.html
+++ b/Code/Drew/htmlcss/lab04-personal_portfolio.html
@@ -61,6 +61,9 @@
       .navbutton5 {
         visibility: hidden;
       }
+      a {
+        color: #ffd6cf
+      }
       .mountains {
         position: absolute;
         top: 0px;
@@ -87,7 +90,7 @@
         width: 100%;
         height: 20px;
         font-family: 'Share Tech Mono', monospace;
-        color: #c376c2
+        color: #ffcccb
       }
       .moon {
         position: fixed;
@@ -125,21 +128,31 @@
       <p class="z5" id="header-name">Drew Herron</p>
       <img class="z5 mountains" src="images/mountainverse1.gif" width="100%">
       <img class="z3 mountains" src="images/mountains.gif" width="100%">
-    <div class="z5 navbar">
+    <div class="z1 navbar">
         <div class="navbutton navbutton1" style="hidden">
-          <i class="fab fa-linkedin-in fa-2x"></i>
+          <a href="https://www.linkedin.com/in/andrew-herron/">
+            <i class="fab fa-linkedin-in fa-2x"></i>
+          </a>
         </div>
       <div class="navbutton navbutton2">
-        <i class="fab fa-github fa-2x"></i>
+        <a href="https://github.com/drewherron">
+          <i class="fab fa-github fa-2x"></i>
+        </a>
       </div>
       <div class="navbutton navbutton3">
-        <i class="fab fa-codepen fa-2x"></i>
+        <a href="https://codepen.io/drewherron/#">
+          <i class="fab fa-codepen fa-2x"></i>
+        </a>
       </div>
       <div class="navbutton navbutton4">
-        <i class="fab fa-instagram fa-2x"></i>
+        <a href="https://www.instagram.com/herrherron/">
+          <i class="fab fa-instagram fa-2x"></i>
+        </a>
       </div>
       <div class="navbutton navbutton5">
-        <i class="fab fa-twitter fa-2x"></i>
+        <a href="https://twitter.com/herrherron/">
+          <i class="fab fa-twitter fa-2x"></i>
+        </a>
       </div>
     </div>
     </div>
