--- a/Code/matthew/javascript/guess_number.html
+++ b/Code/matthew/javascript/guess_number.html
@@ -6,53 +6,68 @@
   </head>
   <body>
     <h1>Guess the Number!</h1>
+    <input id="inputLower" type="number"/>
+    <input id="inputUpper" type="number"/>
+    <button id="startGame">Start Game</button>
     <div id="infoField">Choose a number</div>
-    <button id="button0">0</button>
-    <button id="button1">1</button>
+    <div id="container"></div>
     <div id="guessNumber"></div>
 
   <script type="text/javascript">
-    let button0 = document.querySelector("#button0")
-    let button1 = document.querySelector("#button1")
     let infoField = document.querySelector("#infoField")
     let guessNumber = document.querySelector("#guessNumber")
-    let lowest = 0
-    let highest = 1
-    let guesses = highest - lowest
+    let container = document.querySelector("#container")
+    let inputLower = document.querySelector("#inputLower")
+    let inputUpper = document.querySelector("#inputUpper")
+    let startGame = document.querySelector("#startGame")
+    startGame.onclick = function() {
+      container.innerText = ''
+      let lowest = parseInt(inputLower.value)
+      let highest = parseInt(inputUpper.value)
+      let guesses = highest - lowest - 3
+      guessNumber.innerText = `Guesses remaining: ${guesses}`
+      // pick a random number
+      function randomNumber(a, b) {
+        let randomNum = a + Math.floor(Math.random()*(b - a + 1))
+        return randomNum
+      }
+      let computerChoice = randomNumber(lowest, highest)
+      let buttonArray = []
 
-    // pick a random number
-    function randomNumber(a, b) {
-      let randomNum = a + Math.floor(Math.random()*(b - a + 1))
-      return randomNum
-    }
-    let computerChoice = randomNumber(lowest, highest)
-    // for (let i=0; i<100; i++) {
-    //   let result = randomNumber(1,10)
-    //   console.log(result)
-    // }
-    // button selection
-    let buttonArray = [button0, button1]
-    for (let i=0; i<buttonArray.length; i++) {
-      buttonArray[i].onclick = function() {
-        if (guesses == 0) {
-          return
-        }
-        let userGuess = this.innerText
-        if (userGuess == computerChoice) {
-          infoField.innerText = "You won!"
-          guesses = 0
-        } else {
-          guesses--
+      // button selection
+      for (let i=lowest; i<=highest; i++) {
+        let btn = document.createElement("button")
+        btn.innerText = i
+        // btn.style.backgroundColor = "#9297b1"
+        container.appendChild(btn)
+        buttonArray.push(btn)
+        btn.onclick = function() {
           if (guesses == 0) {
-            infoField.innerText = "You lost."
-          } else {
-            infoField.innerText = "Try again."
+            return
           }
-          guessNumber.innerText = `Guesses remaining: ${guesses}`
+          this.setAttribute("disabled", "true")
+          let userGuess = this.innerText
+          if (userGuess == computerChoice) {
+            infoField.innerText = "You won!"
+            guesses = 0
+            let index = computerChoice - lowest
+            let winningButton = buttonArray[index]
+            winningButton.style.backgroundColor = "green"
+          } else {
+            guesses--
+            if (guesses == 0) {
+              infoField.innerText = "You lost."
+              let index = computerChoice - lowest
+              let winningButton = buttonArray[index]
+              winningButton.style.backgroundColor = "green"
+            } else {
+              infoField.innerText = "Try again."
+            }
+            guessNumber.innerText = `Guesses remaining: ${guesses}`
+          }
         }
       }
     }
-
     // decrement number of guesses remaining
   </script>
   </body>
